...
  ('GreenSaturation', 'Calibration'),
  ('BlueHue', 'Calibration'),
  ('BlueSaturation', 'Calibration'),
  ('CameraProfile*', 'Camera profile'),
  ('Look', 'Camera profile'),
  ('LookName', 'Camera profile'),
  ('Crop*', 'Crop'),
  ('RetouchInfo', 'Spot removal'),
  ('RetouchAreas', 'Spot removal'),
  ('RedEyeInfo', 'Red eye'),
  ('HDR*', 'HDR editing'),
  ('SDR*', 'HDR editing'),
  ('Auto*', 'Auto settings'),
...
